--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -1,15 +1,37 @@
-
+body{background-color: #9341e0;
+    color: #fff;
+}
 
 .i {
   display: flex;
-  height: 100vh;
+  height: 130vh;
 }
 
+  
+.orv {
+  animation: spin 4s linear infinite;
+  width: 180px;
+  height: 180px;
+  padding: 150px;
+  margin-top: 80px;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  z-index: -1;
+  box-shadow: inset 0 0 50px #fff, inset 20px 0 60px violet, inset -20px 0 60px #0ff, inset 20px 0 300px violet, inset -20px 0 300px #0ff, 0 0 50px #fff, -10px 0 60px violet, 10px 0 60px #0ff;
+}
+@keyframes spin {
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
 .i-left {
   flex: 1;
   display: flex;
   align-items: center;
   justify-content: center;
+
 }
 
 .i-right {
@@ -23,6 +45,18 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  
+  
+}
+.text{
+ position: absolute;
+ top: 85%;
+ right: 85%;
+ transform: translate(-50%, -50%);
 }
 
 .i-intro {
@@ -31,7 +65,7 @@
 }
 
 .i-name {
-  font-size: 60px;
+  font-size: 40px;
 }
 
 .i-title {
@@ -42,6 +76,8 @@
 .i-title-wrapper {
   height: 100%;
   animation: move 10s ease-in-out infinite alternate;
+  position:relative;
+
 }
 
 @keyframes move {
@@ -61,7 +97,7 @@
 
 .i-title-item {
   height: 50px;
-  font-size: 30px;
+  font-size: 20px;
   font-weight: bold;
   color: #9341e0;
   display: flex;
@@ -69,7 +105,7 @@
 }
 
 .i-dev{
-  font-size:35px;
+  font-size:20px;
   
 }
 
@@ -77,7 +113,7 @@
   width: 30px;
   height: 30px;
   position: absolute;
-  bottom: 20px;
+  bottom: -150px;
 }
 
 .i-img {
@@ -157,12 +193,14 @@
 
   .i-dev{
     font-size:20px;
+
   }
 
   .i-desc{
     display: none;
   }
-  
 
+  }
   
-}
+  
+  
