--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,6 +1,8 @@
+
+
 .c {
   height: 100vh;
-  position: relative;
+  
 }
 
 .c-bg {
@@ -79,6 +81,8 @@ input {
   margin: 10px 0px;
   font-size: 14px;
   padding-left: 10px;
+  background-color:transparent;
+  color:white;
 }
 
 textarea {
@@ -86,6 +90,8 @@ textarea {
   margin: 10px 0px;
   font-size: 14px;
   padding-left: 10px;
+  background-color: transparent;
+  color:white
 }
 
 button {
@@ -96,6 +102,7 @@ button {
   font-weight: 500;
   cursor: pointer;
 }
+
 
 @media screen and (max-width: 480px) {
   .c-wrapper {
@@ -132,4 +139,6 @@ button {
   button {
     margin-top: 10px;
   }
+
+  
 }
