--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -1,10 +1,14 @@
-body{background-color: #9341e0;
-    color: #fff;
+body{background-color: #33007a;
+     color: #fff;
+     scroll-behavior: smooth;
+     margin: 0;
+    
 }
 
 .i {
   display: flex;
-  height: 130vh;
+  height: 135vh;
+  width:100%;
 }
 
   
@@ -56,7 +60,7 @@ body{background-color: #9341e0;
  position: absolute;
  top: 85%;
  right: 85%;
- transform: translate(-50%, -50%);
+ transform: translate(-30%, -40%);
 }
 
 .i-intro {
@@ -183,12 +187,11 @@ body{background-color: #9341e0;
   }
  
   .i-left-wrapper {
-  
-    padding: 10px;
     align-items: center;
     justify-content: center;
     text-align: center;
-    height: 100%;
+    height: 70%;
+    
   }
 
   .i-dev{
@@ -196,11 +199,37 @@ body{background-color: #9341e0;
 
   }
 
+  .i-bg{
+    width: 100%;
+    height: 90%;
+    object-fit: cover;
+  }
   .i-desc{
     display: none;
   }
-
+  
+  .i-scroll{
+    display:none;
   }
+  .orv {
+    width: 80px;
+    height: 80px;
+    padding: 100px;
+  }
+  .text{
+    position:relative;
+    top: 5%;
+    left: 30%;
+
+ 
+   }
+   .myText h1{
+    font-size: 60px;
+  }
+  .i-dev{
+    font-size:12px;
+    
+  }
+
   
-  
-  
+}
