--- a/src/components/productList/productList.css
+++ b/src/components/productList/productList.css
@@ -1,10 +1,16 @@
 .pl {
-  padding: 50px 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
+  padding: 50px 150px;
+  margin-top:100px; 
+
+    
 }
+
+
+
 
 .pl-texts {
   width: 65%;
@@ -43,14 +49,15 @@
 
 @media screen and (max-width: 480px) {
   .pl {
-    padding: 10px;
+    padding: 15px;
   }
 
   .pl-texts {
     width: 100%;
   }
+  
 
-  .pl-desc {
-    display: none;
-  }
+
+
+  
 }
