--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,7 +1,9 @@
 .a {
+  margin-top: 150px;
   height: 100vh;
   display: flex;
   align-items: center;
+
 }
 
 .a-left {
@@ -15,6 +17,7 @@
 
 .a-right {
   flex: 1;
+  margin-top: 35px;
 }
 
 .a-card.bg {
@@ -30,12 +33,14 @@
   border-radius: 30px;
   position: relative;
   overflow: hidden;
+  margin-top:20px;
   }
 
-.a-img {
+.i-img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  position: relative;
 }
 
 .a-award-img {
@@ -50,7 +55,7 @@
   grid-template-columns: repeat(4, 1fr);
   justify-content:center;
   align-items:center;
-  margin-top: 20px;
+  margin-top: 10px;
   padding-top:5px;
   padding-left: 15px;
 }
@@ -66,14 +71,14 @@
 
 
 .a-title {
-  font-weight: 400;
-  /*title */
-  animation: fluido 5s ease-in-out infinite;
-  background: linear-gradient(-45deg, #8c11c5, #e73c7e, #23a6d5, #233ed5);
-  background-size: 300%;
-  -webkit-background-clip: text;
-          background-clip: text;
+  -webkit-text-stroke: 1px #ffffff;
   -webkit-text-fill-color: transparent;
+  width: fit-content;
+  font-size: 4.5em;
+  font-family: 'Modak';
+  text-align: center;
+  background-size: 100%;
+  left:20px;
 }
 
 @keyframes fluido {
@@ -89,14 +94,17 @@
 
 .a-desc{
     font-weight: 300;
+    text-align: left;
+    margin:15px;
 }
 
 .a-award{
-    margin-top: 50px;
+    margin-top: 35px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 10 10 10 10px;
+
 }
 
 .a-award-texts{
@@ -109,50 +117,89 @@
     margin-bottom: 10px;
 }
 
+
+.a-award-img{
+    box-shadow: 0 0 10px rgb(201, 125, 255); 
+}
+
+
+
 @media screen and (max-width:480px) {
-    .a{
-      flex-direction: column;
-      text-align: center;
-      margin-top: 50px;
-    }
-
-    .a-left {
-      width: 100%;
-    }
-
-    .a-card {
-      height: 30vh;
-    }
-
-
-    .a-award-img {
-      width: 60px;
-      height: 60px;
-      border-radius: 20px;
-      margin-right: 15px;
-      display: flex;
-      padding: 8 8 8 8px;
-    }
-    .container-1{ 
-      margin-top: 10px;
-      padding-top:12px;
-      padding-left: 20px;
-    }
-    .container-2{ 
-      margin-top:3px;
-      padding-left:20px;
-      padding-top: 0;
-      margin-bottom: 20px;
-    }
-    .a-award{
-      margin-top: 20px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 5 5 5 5px;
+  .a{
+    flex-direction: column;
+    margin-top: 250px;
   }
-   
-    .a-right{
-      padding: 20px;
-    }
+
+  .a-left {
+    width: 100%;
+  }
+
+ 
+.a-card {
+  width: 100%;
+  height: 100%;
+  border-radius: 30px;
+  position: relative;
+  overflow: hidden;
+  margin-top: 20px;
+}
+
+.i-img-container {
+  width: 70%;
+  height: 70%;
+  display: flex;
+  margin-bottom: 50px;
+}
+
+
+
+ .a-card{
+  width: 80%;
+  height:200%;
+  position:relative;
+  margin-top:90px;
+  margin-bottom: 20px;
+ }
+
+  .a-card.bg {
+    display: none;
+  }
+  
+  .a-award-img {
+    width: 60px;
+    height: 60px;
+    border-radius: 20px;
+    margin-right: 15px;
+    display: flex;
+    padding: 8 8 8 8px;
+  }
+  .container-1{ 
+    margin-top: 10px;
+    padding-top:12px;
+    padding-left: 40px;
+  }
+  .container-2{ 
+    margin-top:3px;
+    padding-left:40px;
+    padding-top: 0;
+    margin-bottom: 20px;
+  }
+  .a-award{
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5 5 5 5px;
+}
+.a-title{
+  font-size: 40px;
+  margin-left: 60px;
+}
+ a.desc{
+  margin: 10px;
+
+ }
+  .a-right{
+    padding-top:100px;
+  }
 }
