--- a/src/components/productList/productList.css
+++ b/src/components/productList/productList.css
@@ -4,40 +4,27 @@
   align-items: center;
   text-align: center;
   padding: 50px 150px;
-  margin-top:100px; 
-
+  margin-top:150px; 
+  margin-bottom: 150px;
     
 }
 
-
-
-
 .pl-texts {
-  width: 65%;
+  width: 60%;
 }
-
 .pl-title {
-  font-size: 50px;
-  font-weight: 600;
-  padding-top: 40px;
-  /*title*/
-  animation: fluido 5s ease-in-out infinite;
-  background: linear-gradient(-45deg, #8c11c5, #e73c7e, #23a6d5, #233ed5);
-  background-size: 300%;
-  -webkit-background-clip: text;
-          background-clip: text;
+  -webkit-text-stroke: 1px #ffffff;
   -webkit-text-fill-color: transparent;
+  width: fit-content;
+  font-size: 4.5em;
+  font-family: 'Modak';
+  background-size: 100%;
+  text-align: center;
+  margin-left:100px;
 }
-
-@keyframes fluido {
-    0% { background-position: 0 100% }
-    50% { background-position: 100% 50% }
-    100% { background-position: 0 50% }
-}
-
 
 .pl-desc {
-  margin: 20px 0px;
+  margin: 10px 0px;
 }
 
 .pl-list {
@@ -47,17 +34,22 @@
   justify-content: space-between;
 }
 
+
 @media screen and (max-width: 480px) {
   .pl {
     padding: 15px;
+  
   }
+
 
   .pl-texts {
     width: 100%;
   }
   
-
-
-
+  .pl-title{
+    font-size: 50px;
+    margin-left:65px;
+  }
+ 
   
 }
