--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -12,7 +12,7 @@
   align-items: center;
   justify-content: center;
   position: relative;
-  height: 100%;
+  margin-top: -210px;
 }
 
 .a-right {
@@ -176,11 +176,11 @@
   .container-1{ 
     margin-top: 10px;
     padding-top:12px;
-    padding-left: 40px;
+    padding-left: 55px;
   }
   .container-2{ 
     margin-top:3px;
-    padding-left:40px;
+    padding-left:55px;
     padding-top: 0;
     margin-bottom: 20px;
   }
@@ -192,7 +192,7 @@
     padding: 5 5 5 5px;
 }
 .a-title{
-  font-size: 40px;
+  font-size: 50px;
   margin-left: 60px;
 }
  a.desc{
@@ -201,5 +201,8 @@
  }
   .a-right{
     padding-top:100px;
+  }
+  .a-sub{
+   margin-left:15px;
   }
 }
