--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -44,7 +44,7 @@ body{background-color: #33007a;
 }
 
 .i-left-wrapper {
-  padding: 2px;
+  padding: 0px;
   height: 50%;
   display: flex;
   flex-direction: column;
@@ -58,7 +58,7 @@ body{background-color: #33007a;
 }
 .text{
  position: absolute;
- top: 270px;
+ top: 200px;
  right: 50px;
  transform: translate(-30%, -40%);
 }
@@ -224,7 +224,7 @@ body{background-color: #33007a;
   .text{
     position:relative;
     top: 0%;
-    left: 30%;
+    margin-left: 95%;
 
    }
    .myText h1{
